Fixed the issue where the images weren't showing properly and changed the styling of the about component to render better on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@
     justify-content: space-evenly;
     background-color: rgb(32, 25, 49);
     color: white;
+    z-index: 10;
+}
+
+.nav-button{
+    font-size: larger;
 }
 
 .nav-button:hover{
@@ -116,41 +121,70 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 95vh;
     width: 100%;
     /* background-color: rgb(250, 249, 246); */
 }
 
 .about-section{
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 33.33333%;
     width: fit;
     margin: 2%;
     box-shadow: 4px 4px 7px 1px rgba(255, 255, 255, 0.055);
     border-radius: 25px;
 }
 
-.to-be-img{
-    height: 50%;
-    width: 40%;
-    background-color: black;
+@media screen and (min-width:768px) {
+    .about-section{
+        flex-direction: row;
+    }
+}
+
+.about-section-reverse{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: fit;
     margin: 2%;
+    box-shadow: 4px 4px 7px 1px rgba(255, 255, 255, 0.055);
+    border-radius: 25px;
+}
+
+@media screen and (min-width:768px) {
+    .about-section-reverse{
+        flex-direction: row-reverse;
+    }
 }
 
 .about-text{
     text-align: center;
-    font-size: x-small;
-    max-width: 70%;
+    max-width: 90%;
     max-height: 90%;
     margin: 2%;
     color: white;
+    margin: 5%;
 }
 
 @media screen and (min-width:768px) {
     .about-text{
-        font-size: 100%;
+        max-width: 70%;
+    }
+}
+
+.about-image{
+    height: 190px;
+    width: auto;
+    margin: 50px;
+    border-radius: 25px;
+}
+
+@media screen and (min-width:768px) {
+    .about-image{
+        height: 400px;
+        width: auto;
     }
 }
 
